@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-25T08:31:57Z",
-  "count_outdated" : 596,
-  "uniques_outdated" : 341,
-  "count" : 642,
-  "uniques" : 367,
+  "timestamp" : "2022-10-25T16:35:30Z",
+  "count_outdated" : 598,
+  "uniques_outdated" : 342,
+  "count" : 644,
+  "uniques" : 368,
   "clones" : [
-    {
-      "timestamp": "2022-10-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-12T00:00:00Z",
       "count": 2,
@@ -100,6 +93,13 @@
       "timestamp": "2022-10-24T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
